test/compile_error/invalidrange.conf.5.def
config invalid_range_conf {
    foo : real[-100~10];
}
